fix: collapse flashing open and closed

--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -1,53 +1,53 @@
-
 .card {
-    text-align: center;
-    padding: 1rem;
-    text-decoration: none;
-    box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-    border: 2px solid var(--border-accent);
-    background-color: var(--background-surface-01);
-    border-radius: 1rem;
-    transition: all .4s ease;
-    transform: scale(1);
-    display: block;
-
-
+  text-align: center;
+  padding: 1rem;
+  text-decoration: none;
+  box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  border: 2px solid var(--border-accent);
+  background-color: var(--background-surface-01);
+  border-radius: 1rem;
+  transition: all 0.4s ease;
+  transform: scale(1);
+  display: block;
+  max-width: 40.5rem;
 }
 
 .card small {
-    color: var(--text-secondary);
+  color: var(--text-secondary);
 }
 
 .callout {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5rem;
 
-    padding: 3rem;
-    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  padding: 3rem;
+  box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
 
-a.card:hover, a.card:focus {
-    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-    border-color: var(--border-primary);
-    transform: scale(1.05);
+a.card:hover,
+a.card:focus {
+  box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  border-color: var(--border-primary);
+  transform: scale(1.05);
 }
 
-a.card:hover img, a.card:focus img {
-    opacity: 0.64 !important;
+a.card:hover img,
+a.card:focus img {
+  opacity: 0.64 !important;
 }
 
 .imageContainer {
-    position: relative;
-    height: 280px;
-    width: 100%;
-    margin-bottom: 1rem;
+  position: relative;
+  height: 280px;
+  width: 100%;
+  margin-bottom: 1rem;
 }
 
 .imageContainer > img {
-    transition: opacity .3s ease-in;
-    object-fit: cover;
-    border-radius: 0.625rem;
-    margin-bottom: 1rem;
+  transition: opacity 0.3s ease-in;
+  object-fit: cover;
+  border-radius: 0.625rem;
+  margin-bottom: 1rem;
 }
