--- a/src/components/link/link.module.css
+++ b/src/components/link/link.module.css
@@ -8,13 +8,17 @@
   text-decoration: none;
   text-align: left;
   gap: 1.5rem;
-  margin: 0 0.8rem;
+  margin: 0 auto;
+  width: 100%;
 
   height: min-content;
   padding: 1.25rem 1.5rem;
   background-color: transparent;
 
   transition: all 0.2s ease-in-out;
+
+  max-width: 40.5rem;
+  box-sizing: border-box;
 }
 
 .cardLink:hover {
